--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
 
     <!-- Hoja de estilo propia -->
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <body>
@@ -34,28 +34,28 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/assets/diseno 5.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/diseno 5.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
                   <h5>SERVICIOS</h5>
                   <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/assets/manzana 3.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/manzana 3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption ">
                   <h5>NOSOTROS</h5>
                   <p>Some representative placeholder content for the second slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/assets/productos 2.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/productos 2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption ">
                   <h5>PRODUCTOS</h5>
                   <p>Some representative placeholder content for the third slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/assets/Operadora 1.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/Operadora 1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption  ">
                   <h5>CONTACTO</h5>
                   <p>Some representative placeholder content for the third slide.</p>
@@ -75,23 +75,23 @@
           <!-- barra navegación horizontal - solo vista movil-->
           <nav class="navbar navbar-expand-lg bg-body-tertiary d-md-none d-sm-block">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="/assets/Logo.png" alt="" width="auto" height="30"></a>
+              <a class="navbar-brand" href="#"><img src="./assets/Logo.png" alt="" width="auto" height="30"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/pages/servicios.html">Servicios</a>
+                    <a class="nav-link active" aria-current="page" href="./pages/servicios.html">Servicios</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/productos.html">Productos</a>
+                    <a class="nav-link" href="./pages/productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -100,15 +100,15 @@
 
           <!-- logo - solo vista md -->
           <div class="logo--md d-md-block d-sm-none d-xs-none">
-            <img src="/assets/Logo.png" alt=""width="100%" height="auto">
+            <img src="./assets/Logo.png" alt=""width="100%" height="auto">
           </div>
 
           <!-- barra navegación vertical - solo vista md-->
           <div class="nav-md btn-group-vertical d-md-block d-sm-none d-xs-none" role="group" aria-label="Vertical button group">
-            <button type="button" class="btn "><a href="/pages/servicios.html">Servicios</a></button>
-            <button type="button" class="btn "><a href="/pages/nosotros.html">Nosotros</a></button>
-            <button type="button" class="btn "><a href="/pages/productos.html">Productos</a></button>
-            <button type="button" class="btn "><a href="/pages/contacto.html">Contacto</a></button>            
+            <button type="button" class="btn "><a href="./pages/servicios.html">Servicios</a></button>
+            <button type="button" class="btn "><a href="./pages/nosotros.html">Nosotros</a></button>
+            <button type="button" class="btn "><a href="./pages/productos.html">Productos</a></button>
+            <button type="button" class="btn "><a href="./pages/contacto.html">Contacto</a></button>            
           </div>
 
 
