--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -15,7 +15,7 @@
     />
 
     <!-- Hoja de estilo propia -->
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <body id="b-nosotros">
@@ -26,7 +26,7 @@
         <nav class="navbar navbar-expand-lg bg-body-secondary">
           <div class="container-fluid">
             <a class="navbar-brand" href="/index.html"
-              ><img src="/assets/Logo.png" alt="" width="auto" height="80"
+              ><img src="./assets/Logo.png" alt="" width="auto" height="80"
             /></a>
             <button
               class="navbar-toggler"
@@ -45,18 +45,18 @@
                   <a
                     class="nav-link active"
                     aria-current="page"
-                    href="/pages/servicios.html"
+                    href="./pages/servicios.html"
                     >Servicios</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
+                  <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/pages/productos.html">Productos</a>
+                  <a class="nav-link" href="./pages/productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                  <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
@@ -64,7 +64,7 @@
         </nav>
         <!-- imagen de fondo -->
         <div class="card text-bg-dark">
-          <img src="/assets/manzana 3.jpg" class="card-img" alt="...">
+          <img src="./assets/manzana 3.jpg" class="card-img" alt="...">
           <div class="card-img-overlay">
             <h5 class="card-title">Nosotros</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -75,7 +75,7 @@
         <div class="card mb-3" style="width: 100% ;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="/assets/Home-ProductDev3.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="./assets/Home-ProductDev3.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
