--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -26,7 +26,7 @@
         <nav class="navbar navbar-expand-lg bg-body-secondary">
           <div class="container-fluid">
             <a class="navbar-brand" href="/index.html"
-              ><img src="./assets/Logo.png" alt="" width="auto" height="80"
+              ><img src="../assets/Logo.png" alt="" width="auto" height="80"
             /></a>
             <button
               class="navbar-toggler"
@@ -64,7 +64,7 @@
         </nav>
         <!-- imagen de fondo -->
         <div class="card text-bg-dark">
-          <img src="./assets/manzana 3.jpg" class="card-img" alt="...">
+          <img src="../assets/manzana 3.jpg" class="card-img" alt="...">
           <div class="card-img-overlay">
             <h5 class="card-title">Nosotros</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -75,7 +75,7 @@
         <div class="card mb-3" style="width: 100% ;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="./assets/Home-ProductDev3.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="../assets/Home-ProductDev3.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
