--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -25,7 +25,7 @@
         <!-- barra navegación -->
         <nav class="navbar navbar-expand-lg bg-body-secondary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html"
+            <a class="navbar-brand" href="./index.html"
               ><img src="../assets/Logo.png" alt="" width="auto" height="80"
             /></a>
             <button
